testdata/golden/sema/valid/variadic_explicit_borrow.fmt
fn count(args: &int[]) -> int {
    return args.__len() to int;
}

fn main() {
    let xs: int[] = [1, 2, 3];
    let n: int = count(&xs);
}
